웹페이지 과제 갱신에 대한 commit 6

--- a/My Page/Portfolio/contact.html
+++ b/My Page/Portfolio/contact.html
@@ -45,9 +45,9 @@
       <div class="site-mobile-inner"></div>
     </nav>
 
-
     <div class="untree_co--site-wrap">
-      <nav class="untree_co--site-nav dark js-sticky-nav">
+
+      <nav class="untree_co--site-nav js-sticky-nav">
         <div class="container d-flex align-items-center">
 
           <div class="site-nav-ul-wrap text-center d-none d-lg-block">
@@ -63,13 +63,11 @@
                   <li>
                     <a href="interests.html">Dramas</a>
                   </li>
-
                 </ul>
               </li>
               <li class="has-children">
                 <a href="study.html">Study</a>
                 <ul class="dropdown">
-
                   <li>
                     <a href="study.html">2022-2학기</a>
                   </li>
@@ -114,15 +112,17 @@
     </div>
 
       <main class="untree_co--site-main">
-        <div class="untree_co--site-hero inner-page bg-light" style="background-image: url('images/배경 1.jpg');">
+        <div class="untree_co--site-hero inner-page bg-light" style="background-image: url('images/배경5.jpg');">
           <div class="container">
             <div class="row align-items-center">
               <div class="col-md-9">
                 <div class="site-hero-contents" data-aos="fade-up">
-                  <h1 class="hero-heading mb-10">Contact Me</h1>
+                  <h1 class="hero-heading mb-10" style="color:#FFFFFC">Contact Me</h1>
                   <div class="sub-text w-75 mt-4">
-                    <p>If you have questions about anything, feel free to come by and ask, any time! </p>
-                    <p><img src="images/svg/balloon-heart-fill.svg"> 아래의 폼을 활용해 궁금한 점 혹은 문의 사항을 남겨주세요! </p>
+                    <p style="color:#FFFFFC">If you have questions about anything,<br> feel free to come by and ask, any time! </p>
+                    <p style="color:#FFFFFC"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-balloon-heart-fill" viewBox="0 0 16 16" style="color:white">
+                      <path fill-rule="evenodd" d="M8.49 10.92C19.412 3.382 11.28-2.387 8 .986 4.719-2.387-3.413 3.382 7.51 10.92l-.234.468a.25.25 0 1 0 .448.224l.04-.08c.009.17.024.315.051.45.068.344.208.622.448 1.102l.013.028c.212.422.182.85.05 1.246-.135.402-.366.751-.534 1.003a.25.25 0 0 0 .416.278l.004-.007c.166-.248.431-.646.588-1.115.16-.479.212-1.051-.076-1.629-.258-.515-.365-.732-.419-1.004a2.376 2.376 0 0 1-.037-.289l.008.017a.25.25 0 1 0 .448-.224l-.235-.468ZM6.726 1.269c-1.167-.61-2.8-.142-3.454 1.135-.237.463-.36 1.08-.202 1.85.055.27.467.197.527-.071.285-1.256 1.177-2.462 2.989-2.528.234-.008.348-.278.14-.386Z"/>
+                    </svg> 아래의 폼를 활용해 메시지를 남겨주세요! </p>
                   </div>
                 </div>
               </div>
@@ -139,7 +139,6 @@
               </div>
 
               <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-up" data-aos-delay="100">
-
                 <form action="#">
                   <div class="form-group">
                     <label for="name">Nickname *</label>
@@ -190,17 +189,14 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </main>
 
-      </div>
+      </main>
 
         <div class="untree_co--site-section mt-5 py-5 bg-body-darker">
           <div class="container">
             <div class="row">
               <div class="col-12 text-center">
-                <h3><img src="images/svg/emoji-smile.svg" class="image-fluid">  Thank you for visiting my website.  <img src="images/svg/emoji-smile.svg" class="image-fluid"></h3>
+                <h3><img src="images/svg/emoji-smile.svg" class="image-fluid" alt="">  Thank you for visiting my website.  <img src="images/svg/emoji-smile.svg" alt="" class="image-fluid"></h3>
               </div>
             </div>
           </div>
@@ -209,13 +205,13 @@
       <footer class="untree_co--site-footer">
         <div class="container">
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4" style="margin-bottom:15px">
               <div class="card" style="width:250px; height:375px">
-                <img src="images/프로필%20사진%202.jpg">
+                <img src="images/프로필%20사진%202.jpg" alt="">
                 <div class="card-body">
                   <h4 class="card-title">Yujin Choi</h4>
                   <p>Birth Date : 2000.08.07</p>
-                  <p>Female<img src="images/svg/femenine.png" class="image-fluid" style="width:15px"></p>
+                  <p>Female<img src="images/svg/femenine.png" class="image-fluid" style="width:15px" alt=""></p>
                   <p><a href="../../index.html" class="more" style="font-weight:bold; color:darkmagenta">More</a></p>
                 </div>
               </div>
@@ -223,14 +219,14 @@
 
             <div class="col-md-4 text-md-start">
               <h3>Contact</h3>
-              <p><a href="#">phone : +82 010-3906-7595</a></p>
-              <p><a href="#">e-mail : cyj44126@naver.com</a></p>
-              <p><a href="#">address : 대한민국 서울특별시</a></p>
-              <h3 class="mt-5">Share your SNS!</h3>
+              <p><a href="#" class="m-1">phone : +82 010-3906-7595</a></p>
+              <p><a href="#" class="m-1">e-mail : cyj44126@naver.com</a></p>
+              <p><a href="#" class="m-1">address : 대한민국 서울특별시</a></p>
+              <h3>Share your SNS!</h3>
                 <p>Let's communicate with me!</p>
                   <form method="get" class="form-sns">
                     <div class="d-flex">
-                      <label><input type="text" class="form-control" placeholder="Write your Instagram ID"></label><br>
+                      <label><input type="text" class="form-control" placeholder="Write your Instagram ID" style="margin-bottom:15px"></label><br>
                       <input type="submit" value="submit" class="btn btn-black text-white">
                     </div>
                   </form>
@@ -238,7 +234,7 @@
 
             <div class="col-md-4">
               <h3>Map</h3>
-              <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3160.801922776582!2d127.04018915106403!3d37.60682052947813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357cbb7f99870231%3A0x385ba8fa17b75534!2z64-Z642V7Jes7J6Q64yA7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1671981599851!5m2!1sko!2skr" frameborder="0" allowfullscreen></iframe>
+              <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3160.801922776582!2d127.04018915106403!3d37.60682052947813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357cbb7f99870231%3A0x385ba8fa17b75534!2z64-Z642V7Jes7J6Q64yA7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1671981599851!5m2!1sko!2skr"></iframe>
             </div>
           </div>
         </div>
