--- a/My Page/Portfolio/study.html
+++ b/My Page/Portfolio/study.html
@@ -16,7 +16,7 @@
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   
-    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,500i,700|Roboto:300,400,500,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,500i,700|Open+Sans:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Roboto:300,400,500,700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/vendor/icomoon/style.css">
     <link rel="stylesheet" href="css/vendor/owl.carousel.min.css">
@@ -66,7 +66,7 @@
                 </ul>
               </li>
               <li class="has-children active">
-                <a href="study.html/">Study</a>
+                <a href="study.html">Study</a>
                 <ul class="dropdown">
                   <li>
                     <a href="#winter">2022-2학기</a>
@@ -117,7 +117,7 @@
            <div class="row align-items-center justify-content-center">
              <div class="col-md-7 text-center">
                <div class="site-hero-contents" data-aos="fade-up">
-                 <h1 class="hero-heading" style="color:black; background-color:#dae0e5; display:inline-block;">    Study   </h1>
+                 <h1 class="hero-heading" style="color:black; background-color:#FEEBB6; display:inline-block;">    Study   </h1>
                </div>
              </div>
            </div>
@@ -251,7 +251,8 @@
            <div class="row justify-content-center text-center">
              <div class="col-lg-6 section-heading" data-aos="fade-up">
                <h3 class="text-center">Etc</h3>
-               <h5> 학과 공부 外</h5>
+               <p>학과 공부 外✏</p>
+               <p>(교과 수업이 아닌 개인적으로 공부한 내용들입니다)</p>
              </div>
            </div>
          </div>
@@ -269,9 +270,10 @@
                    </div>
                    <div id="collapseOne" class="collapse show"  data-parent="#group">
                      <div class="card-body">
-                       학습기간 : 2022.04~2022.06<br>
-                       학습내용<br>
-                       <img src="images/svg/pencil-square.svg"> HSK 4급 취득을 위해 각 파트별(독해,청해,쓰기)로 기출 문제를 풀음. <br> <img src="images/svg/pencil-square.svg"> 필수 어휘 1200개를 반복해 암기.
+                       <span style="text-decoration-line: underline" class="mb-2">학습기간</span> : 2022.04~2022.06<br>
+                       <span style="text-decoration-line: underline" class="mb-2">학습내용</span><br>
+                       <img src="images/svg/pencil-square.svg" class="mb-2"> HSK 4급 취득을 위해 각 파트별(독해,청해,쓰기)로 기출 문제를 풀음. <br> <img src="images/svg/pencil-square.svg"> 필수 어휘 1200개를 반복해 암기. <br>
+                       <span style="text-decoration-line: underline" class="mb-2">학습결과</span> : 🏅HSK 4급 취득🏅
                      </div>
                    </div>
                  </div>
@@ -283,9 +285,10 @@
                    </div>
                    <div id="collapseTwo" class="collapse show" data-parent="#group">
                      <div class="card-body">
-                       학습기간 : 2022.11~2022.12<br>
-                       학습내용<br>
-                       <img src="images/svg/pencil-square.svg"> JLPT N1 취득을 목표로 빈출 어휘와 문법 표현 암기. <br><img src="images/svg/pencil-square.svg"> 독해 문제는 시간을 정해 모의고사를 치르는 식으로 학습.
+                       <span style="text-decoration-line: underline" class="mb-2">학습기간</span> : 2022.05~2022.07<br>
+                       <span style="text-decoration-line: underline" class="mb-2">학습내용</span><br>
+                       <img src="images/svg/pencil-square.svg" class="mb-2"> JLPT N1 취득을 목표로 빈출 어휘와 문법 표현 암기. <br><img src="images/svg/pencil-square.svg"> 독해 문제는 시간을 정해 모의고사를 치르는 식으로 학습함.<br>
+                       <span style="text-decoration-line: underline" class="mb-2">학습결과</span> : 🏅JLPT N1급 취득🏅
                      </div>
                    </div>
                  </div>
@@ -298,9 +301,24 @@
                    </div>
                    <div id="collapseThree" class="collapse show" data-parent="#group">
                      <div class="card-body">
-                       학습기간 : 상시<br>
-                       학습내용<br>
-                       <img src="images/svg/pencil-square.svg"> 내년에 치를 예정인 토익과 무역 영어 시험 준비를 위해 관련 내용을 시간 날때마다 학습함.
+                       <span style="text-decoration-line: underline" class="mb-2">학습기간</span> : 상시<br>
+                       <span style="text-decoration-line: underline" class="mb-2">학습내용</span><br>
+                       <img src="images/svg/pencil-square.svg" class="mb-2"> 내년에 치를 예정인 토익과 무역 영어 시험 준비를 위해 관련 내용을 시간 날때마다 학습함.<br>
+                     </div>
+                   </div>
+                 </div>
+
+                 <div class="card">
+                   <div class="card-header" id="headingFour">
+                     <h5 class="mb-0">
+                       <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFour">자격증 공부</button>
+                     </h5>
+                   </div>
+                   <div id="collapseFour" class="collapse show" data-parent="#group">
+                     <div class="card-body">
+                       <span style="text-decoration-line: underline" class="mb-2">학습기간</span> : 2022.12.28 ~<br>
+                       <span style="text-decoration-line: underline" class="mb-2">학습내용</span><br>
+                       <img src="images/svg/pencil-square.svg" class="mb-2"> 컴퓨터활용능력 1급과 SQLD 자격증 준비를 위한 학습을 진행할 계획임.<br>
                      </div>
                    </div>
                  </div>
@@ -313,19 +331,24 @@
                    <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
                    <li data-target="#carouselIndicators" data-slide-to="1"></li>
                    <li data-target="#carouselIndicators" data-slide-to="2"></li>
+                   <li data-target="#carouselIndicators" data-slide-to="3"></li>
                  </ol>
                  <div class="carousel-inner">
                    <div class="carousel-item active">
                      <img class="d-block" style="width:600px; height:500px" src="images/HSK.jpg" alt="First slide">
-                     <div class="carousel-caption d-none d-md-block"><p>HSK 공부</p></div>
+                     <div class="carousel-caption d-none d-md-block"><p>📙HSK 공부📙</p></div>
                    </div>
                    <div class="carousel-item">
                      <img class="d-block" style="width:600px; height:500px" src="images/JLPT.jpg" alt="Second slide">
-                     <div class="carousel-caption d-none d-md-block"><p>JLPT 공부</p></div>
+                     <div class="carousel-caption d-none d-md-block"><p>📘JLPT 공부📘</p></div>
                    </div>
                    <div class="carousel-item">
                      <img class="d-block" style="width:600px; height:500px" src="images/영어.jpg" alt="Third slide">
-                     <div class="carousel-caption d-none d-md-block"><p>영어 공부</p></div>
+                     <div class="carousel-caption d-none d-md-block"><p>📗영어 공부📗</p></div>
+                   </div>
+                   <div class="carousel-item">
+                     <img class="d-block" style="width:600px; height:500px" src="images/자격증.jpg" alt="Fourth slide">
+                     <div class="carousel-caption d-none d-md-block"><p>📓자격증 공부📓</p></div>
                    </div>
                  </div>
 
@@ -340,7 +363,7 @@
                </div>
              </div>
          </div>
-         </div>
+       </div>
      </section>
      </main>
 
@@ -370,7 +393,7 @@
       <footer class="untree_co--site-footer">
         <div class="container">
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4" style="margin-bottom:15px">
               <div class="card" style="width:250px; height:375px">
                 <img src="images/프로필%20사진%202.jpg">
                 <div class="card-body">
@@ -384,14 +407,14 @@
 
             <div class="col-md-4 text-md-start">
               <h3>Contact</h3>
-              <p><a href="#">phone : +82 010-3906-7595</a></p>
-              <p><a href="#">e-mail : cyj44126@naver.com</a></p>
-              <p><a href="#">address : 대한민국 서울특별시</a></p>
-              <h3 class="mt-5">Share your SNS!</h3>
+              <p><a href="#" class="m-1">phone : +82 010-3906-7595</a></p>
+              <p><a href="#" class="m-1">e-mail : cyj44126@naver.com</a></p>
+              <p><a href="#" class="m-1">address : 대한민국 서울특별시</a></p>
+              <h3>Share your SNS!</h3>
                 <p>Let's communicate with me!</p>
                   <form method="get" class="form-sns">
                     <div class="d-flex">
-                      <label><input type="text" class="form-control" placeholder="Write your Instagram ID"></label><br>
+                      <label><input type="text" class="form-control" placeholder="Write your Instagram ID" style="margin-bottom:15px"></label><br>
                       <input type="submit" value="submit" class="btn btn-black text-white">
                     </div>
                   </form>
