--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
           <div class="container" data-aos="fade-up">
             <div class="row">
               <div class="col-lg-7 mx-auto text-center">
-                <img src="My%20Page/Portfolio/images/프로필%20사진%202.jpg" class="img-fluid rounded-circle mb-3" data-aos="fade-up" style="width:400px">
+                <img src="My%20Page/Portfolio/images/프로필%20사진%202.jpg" class="img-fluid rounded-circle mb-3" data-aos="fade-up" style="width:400px" alt="">
                 <p class="text-body h5 display-4 font-weight-bold mt-4">Yujin Choi</p>
-                <p class="h5 text-center mb-4">Dongduk Women's University <img src="My%20Page/Portfolio/images/svg/logo.svg" class="image-fluid" style="width:55px"></p>
+                <p class="h5 text-center mb-4">Dongduk Women's University <img src="My%20Page/Portfolio/images/svg/logo.svg" class="image-fluid" style="width:55px" alt=""></p>
               </div>
             </div>
           </div>
@@ -574,7 +574,7 @@
           <div class="container">
             <div class="row">
               <div class="col-12 text-center">
-                <h3 class=><img src="My%20Page/Portfolio/images/svg/emoji-smile.svg" class="image-fluid"> Thank you for visiting my website <img src="My%20Page/Portfolio/images/svg/emoji-smile.svg" class="image-fluid"></h3>
+                <h3 class=><img src="My%20Page/Portfolio/images/svg/emoji-smile.svg" class="image-fluid" alt=""> Thank you for visiting my website <img src="My%20Page/Portfolio/images/svg/emoji-smile.svg" class="image-fluid" alt=""></h3>
               </div>
             </div>
           </div>
@@ -584,13 +584,13 @@
 
         <div class="container">
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4" style="margin-bottom:15px">
               <div class="card" style="width:250px; height:375px">
-                <img src="My%20Page/Portfolio/images/프로필%20사진%202.jpg">
+                <img src="My%20Page/Portfolio/images/프로필%20사진%202.jpg" alt="">
                 <div class="card-body">
                   <h4 class="card-title">Yujin Choi</h4>
                   <p>Birth Date : 2000.08.07</p>
-                  <p>Female<img src="My%20Page/Portfolio/images/svg/femenine.png" class="image-fluid" style="width:15px"></p>
+                  <p>Female<img src="My%20Page/Portfolio/images/svg/femenine.png" class="image-fluid" style="width:15px" alt=""></p>
                   <p><a href=#about class="more" style="font-weight:bold; color:darkmagenta">More</a></p>
                 </div>
               </div>
@@ -598,22 +598,22 @@
 
             <div class="col-md-4 text-md-start">
               <h3>Contact</h3>
-              <p><a href="#">phone : +82 010-3906-7595</a></p>
-              <p><a href="#">e-mail : cyj44126@naver.com</a></p>
-              <p><a href="#">address : 대한민국 서울특별시</a></p>
-              <h3 class="mt-5">Share your SNS!</h3>
+              <p><a href="#" class="m-1">phone : +82 010-3906-7595</a></p>
+              <p><a href="#" class="m-1">e-mail : cyj44126@naver.com</a></p>
+              <p><a href="#" class="m-1">address : 대한민국 서울특별시</a></p>
+              <h3>Share your SNS!</h3>
                 <p>Let's communicate with me!</p>
                   <form method="get" class="form-sns">
                     <div class="d-flex">
-                      <label><input type="text" class="form-control" placeholder="Write your Instagram ID"></label><br>
-                      <input type="submit" value="submit" class="btn btn-black text-white">
+                      <label><input type="text" class="form-control" placeholder="Write your Instagram ID" style="margin-bottom:15px"></label><br>
+                      <input type="submit" value="제출" class="btn btn-black text-white">
                     </div>
                   </form>
             </div>
 
             <div class="col-md-4">
               <h3>Map</h3>
-              <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3160.801922776582!2d127.04018915106403!3d37.60682052947813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357cbb7f99870231%3A0x385ba8fa17b75534!2z64-Z642V7Jes7J6Q64yA7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1671981599851!5m2!1sko!2skr" frameborder="0" allowfullscreen></iframe>
+              <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3160.801922776582!2d127.04018915106403!3d37.60682052947813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357cbb7f99870231%3A0x385ba8fa17b75534!2z64-Z642V7Jes7J6Q64yA7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1671981599851!5m2!1sko!2skr"></iframe>
             </div>
           </div>
         </div>
