--- a/My Page/Portfolio/Blog.html
+++ b/My Page/Portfolio/Blog.html
@@ -16,7 +16,7 @@
   <meta name="description" content="" />
   <meta name="keywords" content="" />
 
-    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,500i,700|Roboto:300,400,500,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,500i,700|Open+Sans:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Roboto:300,400,500,700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/vendor/icomoon/style.css">
     <link rel="stylesheet" href="css/vendor/owl.carousel.min.css">
@@ -370,7 +370,7 @@
       <footer class="untree_co--site-footer">
         <div class="container">
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4" style="margin-bottom:15px">
               <div class="card" style="width:250px; height:375px">
                 <img src="images/프로필%20사진%202.jpg">
                 <div class="card-body">
@@ -384,14 +384,14 @@
 
             <div class="col-md-4 text-md-start">
               <h3>Contact</h3>
-              <p><a href="#">phone : +82 010-3906-7595</a></p>
-              <p><a href="#">e-mail : cyj44126@naver.com</a></p>
-              <p><a href="#">address : 대한민국 서울특별시</a></p>
-              <h3 class="mt-5">Share your SNS!</h3>
+              <p><a href="#" class="m-1">phone : +82 010-3906-7595</a></p>
+              <p><a href="#" class="m-1">e-mail : cyj44126@naver.com</a></p>
+              <p><a href="#" class="m-1">address : 대한민국 서울특별시</a></p>
+              <h3>Share your SNS!</h3>
                 <p>Let's communicate with me!</p>
                   <form method="get" class="form-sns">
                     <div class="d-flex">
-                      <label><input type="text" class="form-control" placeholder="Write your Instagram ID"></label><br>
+                      <label><input type="text" class="form-control" placeholder="Write your Instagram ID" style="margin-bottom:15px"></label><br>
                       <input type="submit" value="submit" class="btn btn-black text-white">
                     </div>
                   </form>
