웹페이지 과제 갱신에 대한 commit 6

--- a/My Page/Portfolio/interests.html
+++ b/My Page/Portfolio/interests.html
@@ -84,6 +84,9 @@
                   <li>
                     <a href="Blog.html">음식</a>
                   </li>
+                  <li>
+                    <a href="Blog.html">사진</a>
+                  </li>
                 </ul>
               </li>
               <li><a href="contact.html">Contact</a></li>
