--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
                   <li>
                     <a href="My%20Page/Portfolio/Blog.html">음식</a>
                   </li>
+                  <li>
+                    <a href="My%20Page/Portfolio/Blog.html">사진</a>
+                  </li>
                 </ul>
               </li>
               <li><a href="My%20Page/Portfolio/contact.html">Contact</a></li>
