--- a/My Page/Portfolio/contact.html
+++ b/My Page/Portfolio/contact.html
@@ -85,6 +85,9 @@
                   <li>
                     <a href="Blog.html">음식</a>
                   </li>
+                  <li>
+                    <a href="Blog.html">사진</a>
+                  </li>
                 </ul>
               </li>
               <li class="active"><a href="contact.html">Contact</a></li>
