--- a/My Page/Portfolio/study.html
+++ b/My Page/Portfolio/study.html
@@ -85,6 +85,9 @@
                   <li>
                     <a href="Blog.html">음식</a>
                   </li>
+                  <li>
+                    <a href="Blog.html">사진</a>
+                  </li>
                 </ul>
               </li>
               <li><a href="contact.html">Contact</a></li>
@@ -141,7 +144,7 @@
              <div class="col-lg-4" data-aos="fade-up">
                <span class="subheading d-inline-block mb-2">데이K0013</span>
                <h2 class="mb-4" style="font-weight:bold">웹프로그래밍</h2>
-               <p class="mb-4"><img src="images/svg/check2-circle.svg">  웹 사이트 제작 기술 중 프론트-엔드(Front-End) 기술로 기본적인 HTML, CSS, Javascript에 대해 배운다. <br><br> <img src="images/svg/check2-circle.svg">  실질적인 웹 문서 작성에의 활용을 위해 Pycharm을 통한 프로그래밍을 한 후, GitHub를 이용한 웹 사이트 구축과 웹 문서 publish에 대해 배운다.</p>
+               <p class="mb-4"><img src="images/svg/check2-circle.svg" alt="">  웹 사이트 제작 기술 중 프론트-엔드(Front-End) 기술로 기본적인 HTML, CSS, Javascript에 대해 배운다. <br><br> <img src="images/svg/check2-circle.svg" alt="">  실질적인 웹 문서 작성에의 활용을 위해 Pycharm을 통한 프로그래밍을 한 후, GitHub를 이용한 웹 사이트 구축과 웹 문서 publish에 대해 배운다.</p>
                <p><a href="https://yuzuneul.github.io/Home/lab/index.html" class="btn btn-black">과제 목록</a></p>
              </div>
              <div class="col-lg-8">
@@ -164,7 +167,7 @@
              <div class="col-lg-4" data-aos="fade-up">
                <span class="subheading d-inline-block mb-2">데이B0010</span>
                <h2 class="mb-4" style="font-weight:bold">수리통계학</h2>
-               <p class="mb-4"><img src="images/svg/check2-circle.svg">  통계학의 핵심 이론을 학습한다.<br><br> <img src="images/svg/check2-circle.svg">  기초통계학에 나오는 주요 정리를 증명하여 이해도를 높이고 문제 해결 능력을 배양한다.</p>
+               <p class="mb-4"><img src="images/svg/check2-circle.svg" alt="">  통계학의 핵심 이론을 학습한다.<br><br> <img src="images/svg/check2-circle.svg" alt="">  기초통계학에 나오는 주요 정리를 증명하여 이해도를 높이고 문제 해결 능력을 배양한다.</p>
 
              </div>
              <div class="col-lg-8">
@@ -186,7 +189,7 @@
              <div class="col-lg-4" data-aos="fade-up">
                <span class="subheading d-inline-block mb-2">데이K0058</span>
                <h2 class="mb-4" style="font-weight:bold">데이터베이스응용</h2>
-               <p class="mb-4"><img src="images/svg/check2-circle.svg">  데이터베이스 전문가의 기본 업무인 SQL을 활용하여 데이터베이스 생성, 질의, 분석 작업을 가능하도록 한다.<br><br> <img src="images/svg/check2-circle.svg">  데이터베이스 물리적 설계, 트랜잭션, 보안의 기본 이론을 학습하여 데이터베이스 관리자로서의 역량을 키운다.<br><br> <img src="images/svg/check2-circle.svg">  소셜 네트워크, 텍스트, 게놈 데이터 등 비정형 데이터를 다룰수 있는 NoSQL 및 그래프 데이터베이스 활용 능력을 키운다.</p>
+               <p class="mb-4"><img src="images/svg/check2-circle.svg" alt="">  데이터베이스 전문가의 기본 업무인 SQL을 활용하여 데이터베이스 생성, 질의, 분석 작업을 가능하도록 한다.<br><br> <img src="images/svg/check2-circle.svg" alt="">  데이터베이스 물리적 설계, 트랜잭션, 보안의 기본 이론을 학습하여 데이터베이스 관리자로서의 역량을 키운다.<br><br> <img src="images/svg/check2-circle.svg" alt="">  소셜 네트워크, 텍스트, 게놈 데이터 등 비정형 데이터를 다룰수 있는 NoSQL 및 그래프 데이터베이스 활용 능력을 키운다.</p>
              </div>
              <div class="col-lg-8">
                <div class="row">
@@ -207,7 +210,7 @@
              <div class="col-lg-4" data-aos="fade-up">
                <span class="subheading d-inline-block mb-2">데이B0009</span>
                <h2 class="mb-4" style="font-weight:bold">회귀분석</h2>
-               <p class="mb-4"><img src="images/svg/check2-circle.svg">  R프로그램을 이용하여 데이터를 다루고 적합한 회귀분석 모형을 분석하는 능력을 배양한다.<br><br> <img src="images/svg/check2-circle.svg">  단순회귀분석모형, 다중회귀분석모형, 회귀진단, 모형비교, 변수선택법 등을 다루어 회귀분석에 대한 개념 및 응용을 할 수 있도록 한다.<br><br></p>
+               <p class="mb-4"><img src="images/svg/check2-circle.svg" alt="">  R프로그램을 이용하여 데이터를 다루고 적합한 회귀분석 모형을 분석하는 능력을 배양한다.<br><br> <img src="images/svg/check2-circle.svg" alt="">  단순회귀분석모형, 다중회귀분석모형, 회귀진단, 모형비교, 변수선택법 등을 다루어 회귀분석에 대한 개념 및 응용을 할 수 있도록 한다.<br><br></p>
              </div>
              <div class="col-lg-8">
                <div class="row">
@@ -228,7 +231,7 @@
              <div class="col-lg-4" data-aos="fade-up">
                <span class="subheading d-inline-block mb-2">국경K0039</span>
                <h2 class="mb-4" style="font-weight:bold">국제투자론</h2>
-               <p class="mb-4"><img src="images/svg/check2-circle.svg">  국경 없는 투자가 이루어지는 시대에 활발히 이루어지고 있는 다양한 국제투자의 종류와 형태에 대해서 알아본다.<br><br> <img src="images/svg/check2-circle.svg">  국제투자의 영향력 및 관련 주요 이슈를 다룬다.</p>
+               <p class="mb-4"><img src="images/svg/check2-circle.svg" alt="">  국경 없는 투자가 이루어지는 시대에 활발히 이루어지고 있는 다양한 국제투자의 종류와 형태에 대해서 알아본다.<br><br> <img src="images/svg/check2-circle.svg" alt="">  국제투자의 영향력 및 관련 주요 이슈를 다룬다.</p>
                <p><a href="팀플.htm" class="btn btn-black">조별 과제 PPT</a></p>
              </div>
              <div class="col-lg-8">
@@ -245,7 +248,7 @@
          </div>
        </section>
 
-     <section id="hobby"></section>
+     <section id="hobby">
        <div class="untree_co--site-section">
          <div class="container">
            <div class="row justify-content-center text-center">
@@ -272,7 +275,7 @@
                      <div class="card-body">
                        <span style="text-decoration-line: underline" class="mb-2">학습기간</span> : 2022.04~2022.06<br>
                        <span style="text-decoration-line: underline" class="mb-2">학습내용</span><br>
-                       <img src="images/svg/pencil-square.svg" class="mb-2"> HSK 4급 취득을 위해 각 파트별(독해,청해,쓰기)로 기출 문제를 풀음. <br> <img src="images/svg/pencil-square.svg"> 필수 어휘 1200개를 반복해 암기. <br>
+                       <img src="images/svg/pencil-square.svg" class="mb-2" alt=""> HSK 4급 취득을 위해 각 파트별(독해,청해,쓰기)로 기출 문제를 풀음. <br> <img src="images/svg/pencil-square.svg" alt=""> 필수 어휘 1200개를 반복해 암기. <br>
                        <span style="text-decoration-line: underline" class="mb-2">학습결과</span> : 🏅HSK 4급 취득🏅
                      </div>
                    </div>
@@ -287,7 +290,7 @@
                      <div class="card-body">
                        <span style="text-decoration-line: underline" class="mb-2">학습기간</span> : 2022.05~2022.07<br>
                        <span style="text-decoration-line: underline" class="mb-2">학습내용</span><br>
-                       <img src="images/svg/pencil-square.svg" class="mb-2"> JLPT N1 취득을 목표로 빈출 어휘와 문법 표현 암기. <br><img src="images/svg/pencil-square.svg"> 독해 문제는 시간을 정해 모의고사를 치르는 식으로 학습함.<br>
+                       <img src="images/svg/pencil-square.svg" class="mb-2" alt=""> JLPT N1 취득을 목표로 빈출 어휘와 문법 표현 암기. <br><img src="images/svg/pencil-square.svg" alt=""> 독해 문제는 시간을 정해 모의고사를 치르는 식으로 학습함.<br>
                        <span style="text-decoration-line: underline" class="mb-2">학습결과</span> : 🏅JLPT N1급 취득🏅
                      </div>
                    </div>
@@ -303,7 +306,7 @@
                      <div class="card-body">
                        <span style="text-decoration-line: underline" class="mb-2">학습기간</span> : 상시<br>
                        <span style="text-decoration-line: underline" class="mb-2">학습내용</span><br>
-                       <img src="images/svg/pencil-square.svg" class="mb-2"> 내년에 치를 예정인 토익과 무역 영어 시험 준비를 위해 관련 내용을 시간 날때마다 학습함.<br>
+                       <img src="images/svg/pencil-square.svg" class="mb-2" alt=""> 내년에 치를 예정인 토익과 무역 영어 시험 준비를 위해 관련 내용을 시간 날때마다 학습함.<br>
                      </div>
                    </div>
                  </div>
@@ -318,7 +321,7 @@
                      <div class="card-body">
                        <span style="text-decoration-line: underline" class="mb-2">학습기간</span> : 2022.12.28 ~<br>
                        <span style="text-decoration-line: underline" class="mb-2">학습내용</span><br>
-                       <img src="images/svg/pencil-square.svg" class="mb-2"> 컴퓨터활용능력 1급과 SQLD 자격증 준비를 위한 학습을 진행할 계획임.<br>
+                       <img src="images/svg/pencil-square.svg" class="mb-2" alt=""> 컴퓨터활용능력 1급과 SQLD 자격증 준비를 위한 학습을 진행할 계획임.<br>
                      </div>
                    </div>
                  </div>
@@ -384,7 +387,7 @@
           <div class="container">
             <div class="row">
               <div class="col-12 text-center">
-                <h3><img src="images/svg/emoji-smile.svg" class="image-fluid">  Thank you for visiting my website.  <img src="images/svg/emoji-smile.svg" class="image-fluid"></h3>
+                <h3><img src="images/svg/emoji-smile.svg" class="image-fluid" alt="">  Thank you for visiting my website.  <img src="images/svg/emoji-smile.svg" class="image-fluid" alt=""></h3>
               </div>
             </div>
           </div>
@@ -395,11 +398,11 @@
           <div class="row">
             <div class="col-md-4" style="margin-bottom:15px">
               <div class="card" style="width:250px; height:375px">
-                <img src="images/프로필%20사진%202.jpg">
+                <img src="images/프로필%20사진%202.jpg" alt="">
                 <div class="card-body">
                   <h4 class="card-title">Yujin Choi</h4>
                   <p>Birth Date : 2000.08.07</p>
-                  <p>Female<img src="images/svg/femenine.png" class="image-fluid" style="width:15px"></p>
+                  <p>Female<img src="images/svg/femenine.png" class="image-fluid" style="width:15px" alt=""></p>
                   <p><a href="../../index.html" class="more" style="font-weight:bold; color:darkmagenta">More</a></p>
                 </div>
               </div>
@@ -422,7 +425,7 @@
 
             <div class="col-md-4">
               <h3>Map</h3>
-              <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3160.801922776582!2d127.04018915106403!3d37.60682052947813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357cbb7f99870231%3A0x385ba8fa17b75534!2z64-Z642V7Jes7J6Q64yA7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1671981599851!5m2!1sko!2skr" frameborder="0" allowfullscreen></iframe>
+              <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3160.801922776582!2d127.04018915106403!3d37.60682052947813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357cbb7f99870231%3A0x385ba8fa17b75534!2z64-Z642V7Jes7J6Q64yA7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1671981599851!5m2!1sko!2skr"></iframe>
             </div>
           </div>
         </div>
