웹페이지 과제 갱신에 대한 commit 6

--- a/My Page/Portfolio/interests.html
+++ b/My Page/Portfolio/interests.html
@@ -113,7 +113,7 @@
       </nav>
     </div>
 
-      <main class="untree_co--site-main">
+    <main class="untree_co--site-main">
       <div class="untree_co--site-hero inner-page" style="background-image: url('images/배경5.jpg')">
         <div class="container">
           <div class="row align-items-center justify-content-center">
@@ -133,7 +133,7 @@
             <div class="row justify-content-center text-center site-section pt-0">
               <div class="col-md-6">
                 <h2 class="display-4" data-aos="fade-up">NBA</h2>
-                <p data-aos="fade-up" data-aos-delay="100" style="font-weight:bold" class="h5 m-4"><img src="images/svg/basketball.png" style="width:22px"> 정규 리그 기간 : 2022년 10월 18일 ~ 2023년 4월 9일(현지 기준) <img src="images/svg/basketball.png" style="width:22px"></p>
+                <p data-aos="fade-up" data-aos-delay="100" style="font-weight:bold" class="h5 m-4"><img src="images/svg/basketball.png" style="width:22px" alt=""> 정규 리그 기간 : 2022년 10월 18일 ~ 2023년 4월 9일(현지 기준) <img src="images/svg/basketball.png" style="width:22px" alt=""></p>
                 <p data-aos="fade-up" data-aos-delay="100">일명 ‘느바’라 불리는 NBA에 빠져든지도 어느새 5년째!<br>매일 오전, NBA 경기를 보며 하루를 시작하는 것이 나의 루틴이다</p>
               </div>
             </div>
@@ -219,7 +219,7 @@
                 <div class="row justify-content-center">
                   <div class="col-md-8 py-5">
                     <div class="room-exerpt">
-                      <div class="room-price mb-4 font-weight-bold">Videos about NBA</span></div>
+                      <div class="room-price mb-4 font-weight-bold">Videos about NBA</div>
                       <p>NBA에 처음 입문하고 기초 지식이 없었을 때 자주 시청했던 동영상 채널들이다. </p>
                       <p>전반적인 경기 내용을 포함해 농구와 관련된 지식을 쉽고 빠르게 얻을 수 있어서 농구나 NBA를 아직 잘 모르는 분들께 추천한다!</p>
                       <div class="row mt-5">
@@ -260,7 +260,126 @@
             <div class="row justify-content-center text-center site-section pt-0">
               <div class="col-md-6">
                 <h2 class="display-4" data-aos="fade-up">EPL</h2>
-                <p data-aos="fade-up" data-aos-delay="100" style="font-weight:bold" class="h5 m-4"><img src="images/svg/football.png" style="width:22px"> 경기 일정 : 2022년 8월 5일 ~ 2023년 5월 28일 (현지기준) <img src="images/svg/football.png" style="width:22px"></p>
+                <p data-aos="fade-up" data-aos-delay="100" style="font-weight:bold" class="h5 m-4"><img src="images/svg/football.png" style="width:22px" alt=""> 경기 일정 : 2022년 8월 5일 ~ 2023년 5월 28일 (현지기준) <img src="images/svg/football.png" style="width:22px" alt=""></p>
+                <p data-aos="fade-up" data-aos-delay="100">*초등학생 때 스치듯 본 EPL 주간 하이라이트에 홀린 것이 EPL을 시청하게 된 계기* <br>보통 주말 저녁~새벽에는 EPL 경기를 시청하는게 나의 일상이다.</p>
+              </div>
+            </div>
+            <div class="row no-gutters align-items-stretch room-animate site-section">
+              <div class="col-md-7 img-wrap image-stack-item image-stack-item-top" data-jarallax-element="-100">
+                <div id="ccarouselIndicatorss" class="carousel slide" data-ride="carousel">
+                  <ol class="carousel-indicators">
+                    <li data-target="#ccarouselIndicatorss" data-slide-to="0" class="active"></li>
+                    <li data-target="#ccarouselIndicatorss" data-slide-to="1"></li>
+                    <li data-target="#ccarouselIndicatorss" data-slide-to="2"></li>
+                  </ol>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img class="d-block" style="width:1000px; height:700px" src="images/맨시티.jpg" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block" style="width:1000px; height:700px" src="images/logo.jpg" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block" style="width:1000px; height:700px" src="images/로고.png" alt="Third slide">
+                    </div>
+                  </div>
+
+                  <a class="carousel-control-prev" href="#ccarouselIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#ccarouselIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </div>
+              </div>
+
+              <div class="col-md-5">
+                <div class="row justify-content-center">
+                  <div class="col-md-8 py-5">
+                    <div class="room-exerpt">
+                      <div class="room-price mb-4 font-weight-bold">EPL</div>
+                      <p>영국 잉글랜드의 최상의 프로 축구 리그로 현재 20개의 팀이 순위 경쟁을 벌이고 있다.</p>
+                      <p>한 시즌당 38경기를 치르며, 이 중 상위 4팀은 UEFA 챔피언스 리그 진출 권한을 얻는다.</p>
+                      <p>하위 3팀은 하위 리그인 EFL 챔피언십으로 강등되는데 그렇다 보니 리그 후반에 펼쳐지는 강등권 경쟁도 우승 경쟁만큼 치열하다!</p>
+                      <div class="row mt-4">
+                        <div class="col-12">
+                          <h4 class="mb-4 font-weight-bold">이모저모 <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-search-heart" viewBox="0 0 16 16">
+                            <path d="M6.5 4.482c1.664-1.673 5.825 1.254 0 5.018-5.825-3.764-1.664-6.69 0-5.018Z"/>
+                            <path d="M13 6.5a6.471 6.471 0 0 1-1.258 3.844c.04.03.078.062.115.098l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1.007 1.007 0 0 1-.1-.115h.002A6.5 6.5 0 1 1 13 6.5ZM6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11Z"/>
+                          </svg></h4>
+                          <ul class="list-unstyled ul-check" style="color:#76A7D6">
+                            <li>내가 응원하는 팀은 <a href="https://www.instagram.com/mancity/"><span>맨체스터 시티!</span></a></li>
+                            <li>개인적으로 리그 우승과 더불어 꼭 챔스 우승했으면 좋겠다,,🙏</li>
+                            <li>맨시티를 좋아하게 된 순간은 에딘 제코의 중거리 슛을 본 이후부터!</li>
+                            <li>시차로 인해 새벽에 경기를 보는 경우가 많으나 이제는 적응 완료😊</li>
+                            <li>🙌지금은 타팀에 있지만 맨시티에서의 다비드 실바를 응원했었음🙌</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+              <div class="row no-gutters align-items-stretch room-animate site-section">
+              <div class="col-md-7 order-md-2 img-wrap" data-jarallax-element="-100">
+                <div class="row">
+                  <div class="col-6">
+                    <div class="bg-image" style="background-color: #efefef; width:500px; height:700px; background-image: url('images/CUP.jpg');"></div>
+                  </div>
+                  <div class="col-6">
+                    <div class="bg-image" style="background-color: #efefef; width:500px; height:700px; background-image: url('images/시티.jpg');"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-5">
+                <div class="row justify-content-center">
+                  <div class="col-md-8 py-5">
+                    <div class="room-exerpt">
+                      <div class="room-price mb-4 font-weight-bold">Videos about EPL</div>
+                      <p>EPL을 포함해 챔스나 라리가, 분데스리가, 세리에 등의 내용을 감상할 수 있는 동영상 채널들이다. </p>
+                      <p>축구는 자국 리그를 포함해 세계적으로 유명한 리그가 여러 개 있는 만큼 매 경기마다 리뷰를 진행하는 것은 아니지만, 그래도 '축구'와 관련된 주요한 정보를 해당 채녈들을 통해 얻을 수 있다!</p>
+                      <p>더불어 최근에 월드컵이 화제였던 만큼 월드컵과 관련된 영상도 많으니 시간이 날때 볼 거리가 충분하다!</p>
+                      <div class="row mt-5">
+                        <div class="col-12">
+                          <h3 class="mb-4 font-weight-bold"> Youtube <svg xmlns="http://www.w3.org/2000/svg" style="color:red" width="25" height="25" fill="currentColor" class="bi bi-youtube" viewBox="0 0 16 16">
+                            <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"/>
+                          </svg></h3>
+                          <ul class="list-unstyled ul-check">
+                            <li>PremierLeague<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-circle-fill" viewBox="0 0 16 16" style="margin-left:20px">
+                              <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"/>
+                            </svg><a href="https://www.youtube.com/@premierleague"><span> 영상 보러 가기</span></a></li>
+                            <li>이스타TV<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-circle-fill" viewBox="0 0 16 16" style="margin-left:20px">
+                              <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"/>
+                            </svg><a href="https://www.youtube.com/@leestartv"><span> 영상 보러 가기</span></a></li>
+                            <li>김스타RealKIM<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-circle-fill" viewBox="0 0 16 16" style="margin-left:20px">
+                              <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"/>
+                            </svg><a href="https://www.youtube.com/@realkim10"><span> 영상 보러 가기</span></a></li>
+                            <li>슛포러브<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-circle-fill" viewBox="0 0 16 16" style="margin-left:20px">
+                              <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"/>
+                            </svg><a href="https://www.youtube.com/@shootforlovekorea"><span> 영상 보러 가기</span></a></li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+        <div class="untree_co--site-section pb-0">
+          <div class="container-fluid px-md-0">
+
+            <div class="row justify-content-center text-center site-section pt-0">
+              <div class="col-md-6">
+                <h2 class="display-4" data-aos="fade-up">EPL</h2>
+                <p data-aos="fade-up" data-aos-delay="100" style="font-weight:bold" class="h5 m-4"><img src="images/svg/football.png" style="width:22px" alt=""> 경기 일정 : 2022년 8월 5일 ~ 2023년 5월 28일 (현지기준) <img src="images/svg/football.png" style="width:22px" alt=""></p>
                 <p data-aos="fade-up" data-aos-delay="100">*초등학생 때 스치듯 본 EPL 주간 하이라이트에 홀린 것이 EPL을 시청하게 된 계기* <br>보통 주말 저녁~새벽에는 EPL 경기를 시청하는게 나의 일상이다.</p>
               </div>
             </div>
@@ -339,7 +458,7 @@
                 <div class="row justify-content-center">
                   <div class="col-md-8 py-5">
                     <div class="room-exerpt">
-                      <div class="room-price mb-4 font-weight-bold">Videos about EPL</span></div>
+                      <div class="room-price mb-4 font-weight-bold">Videos about EPL</div>
                       <p>EPL을 포함해 챔스나 라리가, 분데스리가, 세리에 등의 내용을 감상할 수 있는 동영상 채널들이다. </p>
                       <p>축구는 자국 리그를 포함해 세계적으로 유명한 리그가 여러 개 있는 만큼 매 경기마다 리뷰를 진행하는 것은 아니지만, 그래도 '축구'와 관련된 주요한 정보를 해당 채녈들을 통해 얻을 수 있다!</p>
                       <p>더불어 최근에 월드컵이 화제였던 만큼 월드컵과 관련된 영상도 많으니 시간이 날때 볼 거리가 충분하다!</p>
@@ -371,45 +490,8 @@
             </div>
           </div>
         </div>
-      </section>
 
-          <div class="container-fluid px-md-0">
 
-            <div class="row no-gutters align-items-stretch room-animate site-section">
-              <div class="col-md-7 img-wrap" data-jarallax-element="-100">
-                
-                <div class="bg-image h-100" style="background-color: #efefef; background-image: url('images/room_1_a.jpg');"></div>
-                
-              </div>
-              <div class="col-md-5">
-                <div class="row justify-content-center">
-                  <div class="col-md-8 py-5">
-                    <h3 class="display-4 heading">King Bedroom</h3>
-                    <div class="room-exerpt">
-                      <div class="room-price mb-4">$200<span class="per">/night</span></div>
-                      <p>A hotel is an establishment that provides paid lodging on a short-term basis. Facilities provided may range from a modest-quality mattress </p>
-                      <p>Small, lower-priced hotels may offer only the most basic guest services and facilities. </p>
-
-                      <div class="row mt-5">
-                        <div class="col-12">
-                          <h3 class="mb-4">TMI</h3>
-                          <ul class="list-unstyled ul-check">
-                            <li>응원하는 팀은 보스턴 셀틱스!</li>
-                            <li>Handheld and mounted rain shower heads</li>
-                            <li>Wi-Fi access</li>
-                            <li>Safety deposit box</li>
-                            <li>Mini-bar</li>
-                          </ul>
-                        </div>
-                      </div>
-                    </div>
-
-                  </div>
-                </div>
-
-              </div>
-            </div>
-          </div>
 
 
           <div class="container-fluid px-md-0">
@@ -446,8 +528,7 @@
               </div>
             </div>
           </div>
-        </div>
-      </main>
+    </main>
 
 
 
@@ -456,7 +537,7 @@
           <div class="container">
             <div class="row">
               <div class="col-12 text-center">
-                <h3><img src="images/svg/emoji-smile.svg" class="image-fluid">  Thank you for visiting my website.  <img src="images/svg/emoji-smile.svg" class="image-fluid"></h3>
+                <h3><img src="images/svg/emoji-smile.svg" class="image-fluid" alt="">  Thank you for visiting my website.  <img src="images/svg/emoji-smile.svg" class="image-fluid" alt=""></h3>
               </div>
             </div>
           </div>
@@ -467,11 +548,11 @@
           <div class="row">
             <div class="col-md-4" style="margin-bottom:15px">
               <div class="card" style="width:250px; height:375px">
-                <img src="images/프로필%20사진%202.jpg">
+                <img src="images/프로필%20사진%202.jpg" alt="">
                 <div class="card-body">
                   <h4 class="card-title">Yujin Choi</h4>
                   <p>Birth Date : 2000.08.07</p>
-                  <p>Female<img src="images/svg/femenine.png" class="image-fluid" style="width:15px"></p>
+                  <p>Female<img src="images/svg/femenine.png" class="image-fluid" style="width:15px" alt=""></p>
                   <p><a href="../../index.html" class="more" style="font-weight:bold; color:darkmagenta">More</a></p>
                 </div>
               </div>
@@ -494,7 +575,7 @@
 
             <div class="col-md-4">
               <h3>Map</h3>
-              <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3160.801922776582!2d127.04018915106403!3d37.60682052947813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357cbb7f99870231%3A0x385ba8fa17b75534!2z64-Z642V7Jes7J6Q64yA7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1671981599851!5m2!1sko!2skr" frameborder="0" allowfullscreen></iframe>
+              <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3160.801922776582!2d127.04018915106403!3d37.60682052947813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357cbb7f99870231%3A0x385ba8fa17b75534!2z64-Z642V7Jes7J6Q64yA7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1671981599851!5m2!1sko!2skr"></iframe>
             </div>
           </div>
         </div>
