--- a/My Page/Portfolio/Blog.html
+++ b/My Page/Portfolio/Blog.html
@@ -52,7 +52,7 @@
 
           <div class="site-nav-ul-wrap text-center d-none d-lg-block">
             <ul class="site-nav-ul js-clone-nav">
-              <li class="active"><a href="../../index.html">Home</a></li>
+              <li><a href="../../index.html">Home</a></li>
 
               <li class="has-children">
                 <a href="interests.html">Interests</a>
